Navbar con menos gap para dispositivos móviles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 <header class="flex justify-center items-center py-5 w-full xl:w-[1120px] mx-auto">
   <span></span>
-  <nav class="flex flex-row gap-x-10 opacity-80">
-    <a href="#top">Inicio</a>
-    <a href="#experience">Experiencia</a>
-    <a href="#projects">Proyectos</a>
-    <a href="#coming-soob">Sobre mi</a>
-    <a href="mailto:up200966@alumnos.upa.edu.mx">Contacto</a>
+  <nav class="flex flex-row gap-x-2 sm:gap-x-10 opacity-80">
+    <a href="#top"><span class="hover:text-yellow-300">Inicio</span></a>
+    <a href="#experience"><span class="hover:text-yellow-300">Experiencia</span></a>
+    <a href="#projects"><span class="hover:text-yellow-300">Proyectos</span></a>
+    <a href="#coming-soon"><span class="hover:text-yellow-300">Sobre mi</span></a>
+    <a href="mailto:up200966@alumnos.upa.edu.mx"><span class="hover:text-yellow-300">Contacto</span></a>
   </nav>
 </header>
